[package]
name = "scml"
version = "0.1.0"
authors = ["valentine-mario <valentine13400@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[target.x86_64-unknown-linux-gnu]
linker= "x86_64-unknown-linux-gnu"

[target.x86_64-pc-windows-gnu]
linker="x86_64-pc-windows-gnu"
